@@ -32,40 +32,15 @@
 </p>
 
 <p>
-This document describes how you can monitor "private" services and attributes of Novell Netware servers, such as: 
-</p>
-
-<ul>
-<li>Memory usage</li>
-<li>Processor utilization</li>
-<li>Cache buffers</li>
-<li>Active connections</li>
-<li>Volume (disk) usage</li>
-<li>etc.</li>
-</ul>
-
-<p>
-Publicly available services that are provided by Netware servers (HTTP, FTP, etc.) can be monitored easily by following the documentation on <a href="monitoring-publicservices.html">monitoring publicly available services</a>.
+This document provides information on how you can monitor Novell Netware servers. 
 </p>
 
 <p>
-<strong><u>Overview</u></strong>
+<strong><u>External Resources</u></strong>
 </p>
 
 <p>
-TODO...
-</p>
-
-<p>
-<img src="images/note.gif" border="0" align="bottom" alt="Note" title="Note"> Note: I'm looking for volunteers to writeup a HOWTO on monitoring Netware servers.  I only have access to an ancient Netware 4.11 server, so I can't offer up-to-date instructions.  If you would like to contribute documentation, consider posting it on the <a href="http://www.nagioscommunity.org/wiki/">NagiosCommunity wiki</a>.
-</p>
-
-<p>
-<strong><u>Other Resources</u></strong>
-</p>
-
-<p>
-Novell has various documentation on monitoring Netware servers with Nagios at their <a href="http://www.novell.com/coolsolutions/">Cool Solutions</a>, including:
+You can find documentation on monitoring Netware servers with Nagios at Novell's <a href="http://www.novell.com/coolsolutions/">Cool Solutions</a> site, including:
 </p>
 
 <ul>
@@ -77,6 +52,14 @@ Novell has various documentation on monitoring Netware servers with Nagios at th
 <li><a href="http://www.novell.com/coolsolutions/tools/17580.html">NDPS/iPrint Print Queue Monitoring by Nagios</a></li>
 <li><a href="http://www.novell.com/coolsolutions/tools/16935.html">check_gwiaRL Plugin for Nagios 2.0</a></li>
 </ul>
+
+<p>
+<img src="images/tip.gif" border="0" align="bottom" alt="Tip" title="Tip"> Tip: When you visit Novell's <a href="http://www.novell.com/coolsolutions/">Cool Solutions</a> site, search for "Nagios" to find more articles and software components related to monitoring.
+</p>
+
+<p>
+Thanks to <a href="http://www.novell.com/coolsolutions/author/1301.html">Christian Mies</a>, <a href="http://www.novell.com/coolsolutions/author/1525.html">Rainer Brunold</a>, and others for contributing Nagios and Netware documentation, addons, etc. on the Novell site!
+</p>
 
 
 <hr>
